--- a/db/persons.yaml
+++ b/db/persons.yaml
@@ -3117,6 +3117,12 @@ persons:
     - org: bcg
       role: advisor
       note: Consultant
+  andrew-forrest:
+    born: 1961
+    nationality: AUS
+    affiliations:
+    - org: fortescue
+      role: founder
   andrew-knight:
     born: 1939
     nationality: GBR
@@ -3722,6 +3728,13 @@ persons:
       role: chairman
       from: 2003
       note: Director since 1981, Chairman 2003
+  anthony-albanese:
+    born: 1963
+    nationality: AUS
+    affiliations:
+    - org: governo-australia
+      role: leader
+      from: 2022
   anthony-barnett:
     born: 1942
     nationality: GBR
@@ -3865,6 +3878,12 @@ persons:
       from: 2008
       to: 2010
       note: CFO & EVP
+  anthony-pratt:
+    born: 1960
+    nationality: AUS
+    affiliations:
+    - org: visy
+      role: chairman
   anthony-smare:
     nationality: PNG
     note: Lawyer and geologist. Former partner Allens Arthur Robinson. Founded Kumul Foundation and Lek Natin Foundation.
@@ -7952,6 +7971,14 @@ persons:
       role: chairman
       from: 2020
       note: President Commissioner
+  chase-carey:
+    born: 1954
+    nationality: USA
+    affiliations:
+    - org: fox-corporation
+      role: board
+      from: 2019
+      note: Independent Director, ex-Chairman Formula 1
   chase-herro:
     nationality: USA
     affiliations:
@@ -8615,6 +8642,14 @@ persons:
       role: executive
       from: 2021
       note: CEO & Chair
+  christopher-oechsli:
+    nationality: USA
+    affiliations:
+    - org: atlantic-philanthropies
+      role: executive
+      from: 2011
+      to: 2020
+      note: President and CEO; led spend-down and closure
   christopher-schaepe:
     nationality: USA
     affiliations:
@@ -8935,6 +8970,12 @@ persons:
       from: 1945
       to: 1951
       note: Prime Minister
+  clive-palmer:
+    born: 1954
+    nationality: AUS
+    affiliations:
+    - org: mineralogy
+      role: chairman
   cofer-black:
     born: 1950
     nationality: USA
@@ -17745,6 +17786,14 @@ persons:
       from: 1999
       to: 2006
       note: First CEO
+  gina-rinehart:
+    born: 1954
+    nationality: AUS
+    affiliations:
+    - org: hancock-prospecting
+      role: chairman
+    - org: ipa
+      role: donor
   ginevra-elkann:
     nationality: ITA
     affiliations:
@@ -19334,6 +19383,12 @@ persons:
     relations:
     - person: nicky-oppenheimer
       type: father
+  harry-triguboff:
+    born: 1933
+    nationality: AUS
+    affiliations:
+    - org: meriton
+      role: founder
   harry-you:
     nationality: USA
     affiliations:
@@ -24243,6 +24298,15 @@ persons:
     born: 1926
     died: 2022
     nationality: CHN
+  jim-chalmers:
+    born: 1978
+    nationality: AUS
+    affiliations:
+    - org: wef
+      role: member
+    - org: governo-australia
+      role: minister
+      from: 2022
   jim-clark:
     born: 1944
     nationality: USA
@@ -27432,6 +27496,9 @@ persons:
       from: 2011
       to: 2017
       note: Senator New Hampshire
+    - org: news-corp
+      role: board
+      note: Independent Director
     - org: bae-systems
       role: chairman
       from: 2021
@@ -28514,6 +28581,7 @@ persons:
     - org: fox-corporation
       role: chairman
       from: 2019
+      note: Executive Chair & CEO
   lal-bahadur-shastri:
     born: 1904
     died: 1966
@@ -33513,6 +33581,12 @@ persons:
       role: minister
       from: 2025
       note: Minister of Industry
+  melanie-perkins:
+    born: 1987
+    nationality: AUS
+    affiliations:
+    - org: canva
+      role: founder
   mellody-hobson:
     born: 1969
     nationality: USA
@@ -34288,6 +34362,15 @@ persons:
       from: 2004
       to: 2009
       note: CEO
+  michele-bullock:
+    born: 1964
+    nationality: AUS
+    affiliations:
+    - org: fsb
+      role: member
+    - org: rba
+      role: leader
+      from: 2023
   michele-ferrero:
     born: 1925
     died: 2015
@@ -34457,6 +34540,12 @@ persons:
       role: minister
       from: 2019
       note: Economy Minister
+  mike-cannon-brookes:
+    born: 1979
+    nationality: AUS
+    affiliations:
+    - org: atlassian
+      role: founder
   mike-herzog:
     born: 1952
     nationality: ISR
@@ -36091,6 +36180,14 @@ persons:
     - org: wef
       role: ygl
       from: 2014
+  natalie-bancroft:
+    born: 1980
+    nationality: USA
+    affiliations:
+    - org: news-corp
+      role: board
+      from: 2007
+      note: Bancroft family representative
   natalie-black:
     nationality: GBR
     affiliations:
@@ -38956,6 +39053,14 @@ persons:
       from: 1974
       to: 2013
       note: CEO 2005-2013
+  paul-ryan:
+    born: 1970
+    nationality: USA
+    affiliations:
+    - org: fox-corporation
+      role: board
+      from: 2019
+      note: Independent Director, ex-Speaker House
   paul-singer:
     born: 1944
     nationality: USA
@@ -39396,6 +39501,13 @@ persons:
     - org: carnegie-endowment
       role: chairman
       note: Chair of the Board
+  penny-wong:
+    born: 1968
+    nationality: AUS
+    affiliations:
+    - org: governo-australia
+      role: minister
+      from: 2022
   per-franzen:
     nationality: SWE
     affiliations:
@@ -39700,6 +39812,12 @@ persons:
       from: 2001
       to: 2004
       note: President & CEO Singapore Technologies
+  peter-smitham:
+    nationality: IRL
+    affiliations:
+    - org: atlantic-philanthropies
+      role: chairman
+      note: Chair of the Board
   peter-sutherland:
     born: 1946
     died: 2018
@@ -42706,6 +42824,13 @@ persons:
       role: board
       from: 2025
       note: Corporation Fellow 2025-
+  richard-marles:
+    born: 1967
+    nationality: AUS
+    affiliations:
+    - org: governo-australia
+      role: minister
+      from: 2022
   richard-nixon:
     born: 1913
     died: 1994
@@ -43457,6 +43582,24 @@ persons:
       role: board
       from: 2021
       note: Ex Treasury, Goldman
+  robert-thomson:
+    born: 1961
+    nationality: AUS
+    affiliations:
+    - org: news-corp
+      role: executive
+      from: 2013
+      note: CEO, contract to 2030
+    - org: dow-jones
+      role: executive
+      from: 2007
+      to: 2012
+      note: Editor-in-Chief, then Managing Editor WSJ
+    - org: financial-times
+      role: executive
+      from: 1985
+      to: 2007
+      note: Beijing/Tokyo correspondent, then FT US editor
   robert-work:
     nationality: USA
     affiliations:
@@ -44283,16 +44426,33 @@ persons:
       note: Presidente 2017-2026
   rupert-murdoch:
     born: 1931
-    nationality: USA
+    nationality: AUS-USA
     family: murdoch
     affiliations:
+    - org: bilderberg
+      role: member
+      note: Multiple attendee
+    - org: wef
+      role: member
+      note: Davos attendee
+    - org: cfr
+      role: member
     - org: news-corp
-      role: founder
+      role: chairman
       note: chairman-emeritus
     - org: fox-corporation
       role: chairman
       from: 2019
       note: Emeritus
+    - org: atlantic-council
+      role: honoree
+      from: 2008
+      note: Leadership Award 2008
+    - org: oxford
+      role: alumni
+      note: MA PPE 1953, Worcester College
+    - org: news-corp-australia
+      role: founder
   russell-hardy:
     born: 1965
     nationality: GBR
@@ -45060,6 +45220,15 @@ persons:
     - person: edgar-bronfman-sr
       type: child
       note: daughter of Edgar Sr, 3rd marriage
+  sara-lawrence-lightfoot:
+    nationality: USA
+    affiliations:
+    - org: harvard
+      role: faculty
+      note: Professor, Graduate School of Education
+    - org: atlantic-philanthropies
+      role: board
+      note: Deputy Chair
   sara-menker:
     nationality: USA
     note: Founder/CEO Gro Intelligence. Former VP Morgan Stanley Commodities. Trustee Mandela Institute. African Leadership
@@ -45223,6 +45392,12 @@ persons:
       role: minister
       from: 2025
       note: Secretary of the Treasury
+  scott-farquhar:
+    born: 1979
+    nationality: AUS
+    affiliations:
+    - org: atlassian
+      role: founder
   scott-gottlieb:
     born: 1972
     nationality: USA
@@ -48312,6 +48487,13 @@ persons:
     - person: jeremy-heywood
       type: spouse
       note: Married 1997; three children
+  suzanne-scott:
+    nationality: USA
+    affiliations:
+    - org: fox-corporation
+      role: executive
+      from: 2018
+      note: CEO Fox News Media
   t-boone-pickens:
     born: 1928
     died: 2019
@@ -50123,6 +50305,14 @@ persons:
       note: WEF Annual Meeting 2016
     - org: chineseall
       role: founder
+  tony-abbott:
+    born: 1957
+    nationality: AUS
+    affiliations:
+    - org: fox-corporation
+      role: board
+      from: 2023
+      note: Independent Director, ex-PM Australia
   tony-blair:
     born: 1953
     nationality: GBR
